--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       ></button>
     </div>
 
-    <script src="/js/gallery-items.js" type="module"></script>
-    <script src="/js/task.js" type="module"></script>
+    <script src="./js/gallery-items.js" type="module"></script>
+    <script src="./js/task.js" type="module"></script>
   </body>
 </html>
